# jupyter_notebook_to_presentation

./: .gitignore  Cargo.toml  LICENSE  readme.md  run_tests.sh
src/: arguments.rs  commands.rs  create_presentation.rs  get_files.rs  main.rs  notebook.rs  path.rs
tests/: head_page.rmd
tests/notebooks/: class.ipynb  python.ipynb  wrap_images.ipynb
tests/notebooks/multiple_books/: 01_book.ipynb  02_book.ipynb
tests/notebooks/multiple_books/01_sub_folder/: 01_sub_book.ipynb
tests/presentations/: all.html  all.rmd  class.html  class.rmd  multiple_books.html  multiple_books.rmd  python.html  python.rmd  wrap_images.html  wrap_images.rmd
