[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
arg = {version = "0.4.1", features = ["std"]}
markdown = "1.0.0-alpha.7"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
simple_logger = { version = "4.0.0", default-features = false, features = ["colors"] }
lazy_static = "1.4.0"
regex = "1.7.1"
markdown-parser = "0.1.2"
chumsky = "0.9.2"

